includes/style.css
body {
    font: 1em 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'Lucida', Sans-Serif;
    }

h1 {font-size: 12px; padding: 10px;}

#map, .tut canvas {
    width: 400px;
    height: 301px;
    margin: 100px auto 10px auto;
    border: 1px solid #000;
     display:block;
    }
    
#full_game_wrapper {
    margin: 20px auto; width: 720px; vertical-align:top; min-width: 720px; height: 520px; white-space: nowrap; border: 3px solid #000;
    }
#full_game_wrapper * {white-space: normal;}
#cr-stage {display: inline-block; vertical-align:top; width: 520px; height: 520px; }
.sidebar {height: 480px; width: 159px; display: inline-block; vertical-align:top; border-left: 1px solid #000;}
    
#sprite {
    background: /*#f00*/ transparent url('images/nyan.png');
    width: 50px; height: 35px;
    position: relative;
    }
    
#sprite.moving {
    background: transparent url('images/nyan.gif');
    }
    
#console {
    width: 180px; height: 100%; font-size: 10px; line-height: 13px;
    background: #f0f0f0; border-left: 1px solid #000;
    }
    
.inner {padding: 10px;}

#console span {max-width: 100%; display:none;}

.dialogue {border-top: 1px solid #000;}

.dbox {
    padding: 20px;
    background: #000 url(images/mochaGrunge.png);
    color: #fff; font-size: 12px !important; line-height: 22px !important;
    font-family: 'Press Start 2P', cursive !important;
    }
    
.dbox.light {background: #4f543f url(images/lightGrunge.png);}

.dbox h3 {font-size: inherit; margin-bottom: 10px;}
.dbox .portrait {height: 100px; width: 100px; float: left; margin-right: 20px; margin-bottom: 10px;
    box-shadow: inset 0 0 20px rgba(255,255,255,0.1), inset 0 0 5px rgba(255,255,255,0.2);
    border: 1px solid #fff;
    }
    
.loading, .start { font-family: 'Press Start 2P', cursive !important;}
.loading {width: 520px !important; height: 520px !important;}
.loading h3 {text-align: center; font-weight: bold; margin: 100px 0 20px 0; font-size: 21px;}
#bar {width: 200px; margin: 20px auto; 
    padding: 0; height: 30px; background: #999; border: 1px solid #000; 
    border-radius: 8px; overflow: hidden;}
#fill {width: 0; background: #0f0; height: 30px; margin: 0;}
#loadtext {text-align: center; font-style:italic;}

.start {text-align: center; background: #eee; font-size: 12px !important; 
   width: 150px; border: 1px solid #000;}
.start:hover {background: #fff;}
.start:active {background: #999;}
.start p {line-height: 50px; width: 100%; height: 100%; cursor: pointer;}
.innershadow { box-shadow: inset 0 0 20px rgba(0,0,0,0.1), inset 0 0 5px rgba(0,0,0,0.2); }

.inventory fieldset {
    vertical-align:top; border-radius: 5px;
    border: 3px solid #7d9457; margin: 0px 10px 10px 0;
    width: 40px; height: 40px; padding: 6px;
    display: inline-block; text-align: center; background: #000;
    box-shadow: 0 0 20px rgba(0,0,0,0.1), 0 0 5px rgba(0,0,0,0.4);
    }
.inventory fieldset.active {
    background: #000 url(images/mochaGrunge.png); border: 3px solid #fff;
    }

.sidebar {text-align: center;}
.sidebar fieldset {
    vertical-align:top; border-radius: 5px;
    border: 3px solid #7d9457; margin-bottom: 10px;
    width: 50px; height: 70px; padding: 6px;
    display: inline-block; text-align: center; background: #000;
    box-shadow: 0 0 20px rgba(0,0,0,0.1), 0 0 5px rgba(0,0,0,0.4);
    }
.margin-right { margin: 0 20px 0 0;}

#summary {text-align: left; background: #000; 
    padding: 4px 8px; margin: 0; 
    width: 462px; height: 60px; border-radius: 5px;
    border: 3px solid #7d9457; position: absolute; bottom: 20px;
    font-size: 11px; line-height: 20px; overflow: hidden;}

#life {text-align: left; background: #000; 
    padding: 4px; margin: 0 -5px 10px -5px; 
    width: 154px; height: 40px; border-radius: 5px;
    border: 3px solid #7d9457;}
    
legend {color: #fff; font-size: 8px;}

#life-red {background: #ff0000; height: 20px; width: 0; margin-right: -154px; margin-bottom: -20px;}
#life-gray {background: #aaaaaa; height: 20px; width: 0; margin-right: -154px; margin-bottom: -20px;}

#life-red.line2 {margin-top: 20px; margin-bottom: -40px;}
#life-gray.line2 {margin-top: 20px; margin-bottom: -40px;}

#life-gray.line1 {width: 0px;}
#life-red.line1 {width: 0px;}

#meta {text-align: left; line-height: 28px;}
#meta * {vertical-align: middle;}

#meta .collectible {display: inline-block; padding: 2px; width: 20px; text-align: center; margin-right: 10px;}
.coin {height: 20px; width: 11px; border: none;}
.bomb {height: 20px; width: 19px; border: none;}

#inventory {
    height: 480px; width: 480px; margin-bottom: -520px; margin-right: -520px; position: absolute; z-index: 5;
    display: none; }
    
.Reward {
    vertical-align:top; border-radius: 5px;
    border: 3px solid #ffd43d; margin: 0px 10px 10px 0;
    width: 40px; height: 40px; padding: 6px;
    display: inline-block; text-align: center; background: #000;
    box-shadow: 0 0 20px rgba(255,255,0,1), 0 0 5px rgba(255,255,255,1);
    }
    
.dialogue-next {position: absolute; right: 0; bottom: 0; padding: 8px 8px;}

